added a few relevant references.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4302,6 +4302,28 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Kirby2011,
+  author = {R. C. Kirby},
+  title = {Fast simplicial finite element algorithms using Bernstein polynomials},
+  journal = {Numerische Matematik},
+  year = {2011},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@ARTICLE{Kirby2010,
+  author = {R. C. Kirby},
+  title = {From Functional Analysis to Iterative Methods},
+  journal = {SIAM Review},
+  year = {2010},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+
+
+
+
 @ARTICLE{Kirby2006d,
   author = {Robert C. Kirby},
   title = {Optimizing {FIAT} with level 3 {BLAS}},
