updates in the kirby-1 chapter

--- a/book.tex
+++ b/book.tex
@@ -46,7 +46,7 @@
 
 \fenicsinput{kirby-7}
 \fenicsinput{kirby-6}
-%\fenicsinput{kirby-1}
+\fenicsinput{kirby-1}
 \fenicsinput{kirby-5}
 \fenicsinput{logg-3}
 %%%\fenicsinput{oelgaard-2}
