--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -21,7 +21,7 @@
 \editornote{Reuse color figures from chapter [kirby-7] for RT elements etc.}
 
 This chapter describes the mathematical framework for constructing general finite elements on 
-the reference domain. It describes the common abstractions used by the FIAT and SyFi projects.  
+reference domains. This framework is used by both the FIAT and SyFi projects.  
 
 \section{Background}
 The finite element literature contains a huge collection of
@@ -89,13 +89,13 @@ finite element in terms of polynomials that are easy to implement and
 well-behaved in floating point arithmetic.  We focus on
 constructing nodal bases for a single, fixed reference element.  As we
 will see in the Chapters~\ref{chap:alnes-3,chap:logg-1}, form compilers such as
-\texttt{ffc}~\cite{Logg2007b} and \texttt{sfc}~\cite{Alnaes2009} will work
+\texttt{ffc}~\citep{Logg2007b} and \texttt{sfc}~\citep{AlnaesMardal2009} will work
 in terms of this single reference element.
 
 
 Other approaches exist in the literature, such as the hierarchical
 bases studied by Szabo and Babuska~\citep{SzaboBabuska1991} and extended to \(
-H(\mathrm{curl}) \) and \( H(\mathrm{div}) \) spaces in work such
+\Hcurl \) and \( \Hdiv \) spaces in work such
 as~\citep{AinCoy2002}.  These approaches can provide greater flexibility for
 refining the mesh and polynomial degree in finite element methods, but
 they also require more care during assembly and are typically constructed
@@ -115,12 +115,10 @@ Ciarlet.
   \femdefinition{}
   \label{chap:kirby-1:fedef} 
 \end{definition}
-
-
 In this definition, the term ``finite element'' refers not only to
 a particular cell in a  mesh, but also to the associated function
-space and degrees of freedom.  Typically, the domain \( K \) is some
-simple polygonal or polyhedral shape and the function space \( P \)
+space and degrees of freedom.  Typically, the domain \( T \) is some
+simple polygonal or polyhedral shape and the function space \( \mathcal{V} \)
 consists of polynomials.
 
 Given a finite element, a concrete
@@ -136,7 +134,7 @@ for this element can be computed by using the following defintion.
 
 
 \begin{definition}
-The \emph{nodal basis} for a finite element \( (K,P,N) \) 
+The \emph{nodal basis} for a finite element \( (T,\mathcal{V},\mathcal{L}) \) 
 is the set of functions \( \{ \phi_i \}_{i=1}^{n} \) such
 that for all \( 1 \leq i,j \leq n \),
 \begin{equation}
@@ -150,7 +148,7 @@ this nodal basis.  For
 any given finite element, one may construct the nodal basis
 explicitly with elementary algebra.  However, this becomes tedious as
 we consider many different familes of elements and want arbitrary
-order instances of each family.  Hence, we present a linear algebraic
+order instances of each family.  Hence, we present a new 
 paradigm here that undergirds computer programs for automating the
 construction of nodal bases.
 
@@ -196,9 +194,9 @@ weights,  much like a quadrature rule.
 
 The fundamental idea in constructing nodal basis is from elementary
 linear algebra: one constructs the desired (nodal) basis as a linear
-combination of a basis one has ``in hand''.  We will start with some
+combination of another available basis.  We will start with some
 basis \( \left\{ \psi_i \right\}_{i=1}^{n} \mbox{that spans} \  \mathcal{V}  \).  From
-this, we construct each nodal basis function
+this, we construct each nodal basis function $\phi_j$ as
 \begin{equation}
  \phi_j = \sum_{k=1}^n \alpha_{jk} \psi_k,
 \end{equation}
@@ -220,13 +218,12 @@ where
 \begin{equation}
 B_{ik} = \ell_i(\psi_k)
 \end{equation}
-is a kind of generalized Vandermonde matrix.   Of course, (\ref{eq:singlebfA}) can be used
-to write a matrix equation for \( A \) as a linear system with \( \dim
-n \) right hand sides and obtain
+is a kind of generalized Vandermonde matrix.   Of course, (\ref{eq:singlebfA}) can be 
+written as
 \begin{equation}
-B \alpha^T = I.
+B \alpha^T = I,
 \end{equation}
-Hence, 
+and we obtain 
 \begin{equation}
 \alpha = B^{-T}.
 \end{equation}
@@ -237,35 +234,36 @@ differentiation, and integration) may be readily computed.
 
 \subsection{Polynomial spaces}
 In Definition \ref{chap:kirby-1:fedef} we defined the finite element in terms
-of a finite dimensional function space $P$. Although it is not strictly
+of a finite dimensional function space $\mathcal{V}$. Although it is not strictly
 neccessary,
 the functions used in finite elements are typically polynomials.
 While our general strategy will in principle accomodate non-polynomial bases, we
 only deal with polynomials in this chapter.
 A common space is
-$\P_k^d$, the space of polynomials of degree $k$ in $\R^d$. There
-are many different ways to represent $\P^d_k$. We will discuss the power
-basis, orthogonal bases, and the Bernstein basis.  Each of these bases
+$\P_q^d$, the space of polynomials of degree $q$ in $\R^d$. There
+are many different ways to represent $\P^d_q$. We will discuss the power
+and Bernstein bases, and orthogonal bases such as Dubiner, and Jacobi.  Each of these bases
 has explicit representations or reccurence relations making them easy to 
-evaluate and differentiate, 
-unlike most finite element bases that are determined by solving 
+evaluate and differentiate. In contrast,  
+most finite element bases that are determined by solving 
 the linear system in Definition \ref{chap:kirby-1:nodaldef}.
-In addition to $\P^d_k$ we will also for some
-elements need $\H^d_k$, the space of homogenous polynomials of degree
-\( k \) in \( d \) variables.
+In addition to $\P^d_q$ we will also for some
+elements need $\H^d_q$, the space of homogenous polynomials of degree
+\( q \) in \( d \) variables.
 
 Typically, the techniques developed  here
 are used on simplices, where polynomials do not have a nice
-tensor-product structure.  Some rectangular elements like the
-Brezzi-Douglas-Marini family~\citep{BrezziDouglasMarini1985a}, however, are not based on
-tensor-product polynomial spaces, and the techniques described
-in this chapther apply in that
-case as well.  SyFi has explicit support for rectangular domains, but
-FIAT does not.
+tensor-product structure.  
+%Some rectangular elements like the
+%Brezzi-Douglas-Marini family~\citep{BrezziDouglasMarini1985a}, however, are not based on
+%tensor-product polynomial spaces, and the techniques described
+%in this chapther apply in that
+%case as well.  
+SyFi does, however, have support for rectangular domains, while  FIAT does not.
 
-\paragraph{Power basis}
-On a line segment, $\P_k^1=\P_q$ the monomial, or power basis is
-\( \{ x^i \}_{i=0}^{q} \), so that any \( \psi \in P_q \) is written as
+\paragraph{Power basis.}
+On a line segment, $\P_q^1=\P_q$ the monomial, or power basis is
+\( \{ x^i \}_{i=0}^{q} \), so that any \( \psi \in \P_q \) is written as
 \begin{equation}
 \label{pn1d}
 \psi = a_0 + a_1 x + \ldots a_q x^q = \sum^q_{i=0} a_i x^i.
@@ -275,13 +273,13 @@ In 2D on triangles, $\P_q$ is spanned by functions on the form
 three dimensions.
 
 This basis is quite easy to evaluate, differentiate, and
-integrate but is very ill-conditioned in numerical calculations.
+integrate. But the basis is very ill-conditioned in numerical calculations.
 For instance, the condition number of the mass matrix using
-the power basis in $\P_{10}$ gives a condition number of $5\cdot10^{14}$, 
+the power basis in $\P^1_{10}$ gives a condition number of $5\cdot10^{14}$, 
 while corresponding condition numbers are $4\cdot 10^6$ and $2\cdot 10^3$ 
 for the Bernstein and Lagrange polynomials, respectively.    
 
-\paragraph{Legendre basis}
+\paragraph{Legendre basis.}
 
 A popular polynomial basis for polygons that are either intervals, rectangles or boxes are the Legendre polynomials.
 This polynomial basis is also usable to represent polynomials of high degree.
@@ -300,7 +298,7 @@ with respect to the $L_2$ inner product, i.e.,
 \end{array}
 \right.
 \]
-The Legendre polynomials are extended to rectangular domains in any dimensions. 
+The Legendre polynomials can be extended to rectangular domains in any dimensions by tensor--products. 
 For instance, in 2D the basis reads, 
 \[
 \psi_{ij}(x,y) = \psi_i(x) \psi_j(y) ,   \quad i,j \leq q, 
@@ -310,15 +308,15 @@ and $\P^q$ is defined by functions on the form,
 v = \sum_{i,j=0}^{i,j <= q}   a_{ij} \psi_{ij} .
 \]
 
-\paragraph{Jacobi basis}
+\paragraph{Jacobi basis.}
 Kirby fill in. 
 
-\paragraph{Dubiner basis}
+\paragraph{Dubiner basis.}
 
 Orthogonal polynomials in simplicial domains are also known, although
 they lack some of the rotational symmetry of the Legendre polynomials.
 The Dubiner basis, frequently used in simplicial spectral
-elements~\cite{missing}, is known under many names in the literature.  It is
+elements~\citep{missing}, is known under many names in the literature.  It is
 an \( L^2 \)-orthogonal basis that can be constructed by mapping particular
 tensor products of Jacobi polynomials on a square by a singular
 coordinate change to a fixed triangle.
@@ -356,16 +354,16 @@ that
 degree \( k \) for each \( k > 0 \).  As a possible disadvantage, the
 basis lacks rotational symmetry that can be found in  other bases.
 
-\paragraph{Bernstein basis}
+\paragraph{Bernstein basis.}
 The Bernstein basis  is another well-conditioned basis that can be
 used in generating finite element bases.
 In 1D, the  basis functions in $\P_q$ take the form,
 \[
 \psi_i^q = \binom{i}{q} x^i (1-x)^{q-i}, \quad i=0,\ldots,q,
 \]
-and then \( P_q \) is spanned by \( \{ \psi_i^q \}_{i=0}^q \).
+and then \( \P_q \) is spanned by \( \{ \psi_i^q \}_{i=0}^q \).
 
-Notice that the berstein basis is consists of powers of \( x \) and \( 1-x \),  which are the
+Notice that the berstein basis consists of powers of \( x \) and \( 1-x \),  which are the
 barycentric coordinates for \( [0,1] \), an observation that makes it
 easy to extend the basis to simplices in higher dimensions.
 Let $b_1$, $b_2$, and $b_3$ be the barycentric coordinates for
@@ -379,7 +377,7 @@ and a basis for $\P_q$ is simply.
 \[
 \{ \psi_{ijk}^q \}_{i,j,k\geq 0}^{i+j+k = q} .
 \]
-The Bernstein polynomials on the tetrahedron are completely
+The Bernstein polynomials on the tetrahedron and even higher dimensional simplices are completely
 analogous.
 
 These polynomials, though less common in the finite element community,
@@ -387,10 +385,10 @@ are well-known in graphics and splines.  They have a great deal of
 rotational symmetry and are nonnegative and so give positive
 mass matrices, though they are not hierarchical.
 
-\paragraph{Homogeneous Polynomials}
+\paragraph{Homogeneous Polynomials.}
 \label{sec:homo:pol}
 
-Another set of polynomials which sometimes are useful are the set
+Another set of polynomials which sometimes is useful is the set
 of homogeneous polynomials $\H^q$. These are polynomials where all terms
 have the same degree. $\H^q$ is in 2D spanned by polynomials on the
 form:
@@ -401,7 +399,7 @@ with a similar definition in $d$D.
 
 
 
-\paragraph{Vector or Tensor valued Polynomials}
+\paragraph{Vector or Tensor valued Polynomials.}
 It is straightforward to generalize the scalar valued polynomials discussed
 earlier to vector or tensor valued polynomials. Let $\{e_i\}$ be canonical
 basis in $\R^d$. Then a basis for the vector valued polynomials is
@@ -417,7 +415,7 @@ We include some standard finite elements to illustrate the concepts and
 motivate the need for different finite elements. Notice
 that the different continuity of the elements result in
 different approximation properties.
-We refer the reader to Chapter \cite{missing} for a more thorough review of
+We refer the reader to Chapter~\ref{chap:kirby-7} for a more thorough review of
 elements.
 
 \begin{figure}
@@ -431,20 +429,20 @@ elements.
 \end{figure}
 
 \begin{example}{\bf{The Lagrange Element}} \\
-The Lagrange element shown in Figure \ref{Lagrange} is the most common element,
-where the black dots mean point evaluation.
+The Lagrange element shown in Figure \ref{Lagrange} is the most common element.
+The degrees of freedom are represented by black dots, which represent point evaluation. 
 The first order element is shown in the leftmost triangle, 
 its degrees of freedom consists of a point evaluation in each of the vertices. 
 That is, the degrees of freedom $\ell_i : \mathcal{V} \rightarrow \mathbb{R}$ are  
 \begin{equation}
-\ell_i ( v) = \int_{T} v \, \delta_{x_i} \, dx,   
+\ell_i ( v) = \int_{T} v \, \delta_{x_i} \, dx = v(x_i),   
 \end{equation}
 where $x_i$ are the vertices (0,0), (1,0), (0,1).
 The cooresponding basis functions
-are $x$, $y$, and $1-x-y$.  The second order element is shown in right 
+are $1-x-y$, $x$, and $y$.  The second order element is shown in right 
 triangle. It has six degrees of freedom, three at the vertices and three
-at the edges. 
-The Lagrange element produce piecewise continuous polynomials and they are therefore
+at the edges, all are point evaluations.  
+The Lagrange element produces piecewise continuous polynomials and they are therefore
 well suited for approximation in $H^1$.
 The Lagrange element of order $q$ spans $\P_q$ on simplices in any dimension.  
 \end{example}
@@ -458,15 +456,15 @@ The Lagrange element of order $q$ spans $\P_q$ on simplices in any dimension.
 \end{figure}
 
 \begin{example}{\bf{ The Hermite Element}} \\
-In Figure \ref{Hermite} we show the Hermite element. The black dots mean point
+In Figure \ref{Hermite} we show the Hermite element on the reference triangle in 2D. The black dots mean point
 evaluation, while the white circles mean evaluation of derivatives in both $x$ and
 $y$ direction. 
 That is, the degrees of freedom $\ell_{i_k} : \mathcal{V} \rightarrow \mathbb{R}$ 
 associated with the vertex $x_i$ are,  
 \begin{eqnarray}
-\ell_{i_1} ( v) = \int_{T} {v} \, \delta_{x_i} \, dx,   \\
-\ell_{i_2} ( v) = \int_{T} \frac{\partial{v}}{\partial x} \, \delta_{x_i} \, dx, \\  
-\ell_{i_3} ( v) = \int_{T} \frac{\partial{v}}{\partial y} \, \delta_{x_i} \, dx,   
+\ell_{i_1} ( v) &=& \int_{T} {v} \, \delta_{x_i} \, dx = v(x_i),    \\
+\ell_{i_2} ( v) &=& \int_{T} \frac{\partial{v}}{\partial x} \, \delta_{x_i} \, dx = \frac{\partial}{\partial x} v(x_i),  \\  
+\ell_{i_3} ( v) &=& \int_{T} \frac{\partial{v}}{\partial y} \, \delta_{x_i} \, dx = \frac{\partial}{\partial y} v(x_i) .    
 \end{eqnarray}
 In addition, there is one internal point evaluation, which in total gives ten degrees of freedom, which is the same number
 of degrees of freedom as in $\P^2_3$.  One feature of the Hermite element
@@ -494,7 +492,7 @@ where $n_i$ is the outward normal vector on edge $i$ and $x_i$ is the correspond
 The Raviart--Thomas element is a vector space with three degrees of freedom. Hence, 
 the standard basis $\P^d_q$ is not a suitable starting point and we use 
 $\mathcal{V} = \P_0^2 \oplus x \H_0$ instead.   
-The Raviart--Thomas element is typically used for approximations in $H(\mathrm{div})$.
+The Raviart--Thomas element is typically used for approximations in $\Hdiv$.
 \end{example}
 
 %\begin{remark}
@@ -609,13 +607,13 @@ where \( 1 \leq i \leq \dim P \) and \( 1 \leq j \leq \dim \bar{P} \).
 \end{proposition}
 
 \section{Operations on the Polynomial spaces}
-Here, we show various important operations may be cast
-in terms of linear algebra, supposing that they may be done on
-original basis \( \{ \psi_i \}_{i=1}^{n} \).
+Here, we show how various important operations may be cast
+in terms of linear algebra, supposing that they may be performed on
+the original basis \( \{ \psi_i \}_{i=1}^{n} \).
 
 \subsection{Evaluation}
 In order to evaluate the nodal basis \( \{ \phi_i \}_{i=1}^{n} \)
-at a given point \( x \in K \), one simply computes the vector
+at a given point \( x \in T \), one simply computes the vector
 \[
 \Psi_i = \psi_i(x)
 \]
@@ -624,7 +622,7 @@ followed by the product
 \phi_i(x) \equiv \Phi_i = A_{ij} \Psi_j.
 \]
 Generally, the nodal basis functions are required at an array of
-points \( \{ x_j \}_{j=1}^{m} \subset K \).  For performance reasons,
+points \( \{ x_j \}_{j=1}^{m} \subset T \).  For performance reasons,
 performing matrix-matrix products may be advantageous.  So, define
 \( \Psi_{ij} = \Psi_i(x_j) \)  and \( \Phi_{ij} = \Phi_i(x_j) \).
 Then all of the nodal basis functions may be evaluated by the
@@ -633,9 +631,8 @@ product
 \Phi_{ij} = A_{ik} \Psi_{kj}.
 \]
 \subsection{Differentiation}
-Differentiation is more complicated, and also presents more options.
-We want to handle the possibility of higher order derivatives. Let
-\( \alpha = ( \alpha_1 , \alpha_2 , \dots \alpha_d ) \) be a
+Differentiation is more complicated and presents more options.
+Let \( \alpha = ( \alpha_1 , \alpha_2 , \dots \alpha_d ) \) be a
 multiindex so that
 \[
 D^\alpha \equiv \frac{\partial^{|\alpha|}}{\partial
@@ -647,7 +644,7 @@ We want to compute the array
 \[
 \Phi^\alpha_i = D^\alpha \phi_i(x)
 \]
-for some \( x \in K \).
+for some \( x \in T \).
 
 One may differentiate the
 original basis functions \( \{ \psi_i \} \) to produce an array
@@ -660,13 +657,13 @@ whence
 \]
 This presupposes that one may conveniently compute all derivatives of
 the \( \{ \psi_i \} \).  This is typically true in symbolic
-computation or when using the either the power basis.  
+computation or when using the the power basis.  
 For the Bernstein, Jacobi, and Legendre
  polynomials reccurence relations are
-available, see \cite{KarniadakisSherwin2005,Kirby2010}.  
+available, see \citep{KarniadakisSherwin2005,Kirby2010}.  
 The Dubiner basis, as typically formulated, contains a coordinate
 singularity that prevents automatic differentiation from working at
-the top vertex.  Recent work~\cite{Kirby} has reformulated recurrence
+the top vertex.  Recent work by \citet{Kirby} has reformulated recurrence
 relations to allow for this possibility.
 
 If one prefers (or is required by the particular starting basis), one
@@ -679,7 +676,7 @@ is constructed so that
 D^k_{ij} \phi_j.
 \]
 How to do this depends on which bases are chosen.  For particular
-details on the Dubiner basis, see~\cite{missing}.  Then, \( \Psi^\alpha \)
+details on the Dubiner basis, see~\citep{missing}.  Then, \( \Psi^\alpha \)
 may be computed by
 \[
 \Psi^\alpha_i = (\mathrm{D}^\alpha A)_{ij} \Phi_{j},
@@ -703,7 +700,7 @@ may be as efficient to use numerical quadrature.  On rectangular
 domains, tensor products of Gauss or Gauss-Lobatto quadrature can be
 used to give efficient quadrature families to any order accuracy.  On the
 simplex, however, optimal quadrature is more difficult to find.
-Rules based on barycentric symmetry~\cite{missing} may be used up to a
+Rules based on barycentric symmetry~\citep{missing} may be used up to a
 certain degree (which is frequently high enough in practice).  If one
 needs to go beyond these rules, it is possible to use the
 mapping~(\ref{eq:dubcoord}) to map tensor products of Gauss-Jacobi
@@ -729,19 +726,19 @@ basis functions from this reference element to each cell in a mesh.
 Sometimes, this is as simple as an affine change of coordinates; in
 other cases it is more complicated.
 For completeness, we briefly describe the basics of creating the global finite elements in terms of a mapped
-reference element. Let therefore $T$ be a polygon and $\hat{T}$ the corresponding reference polygon.
+reference element. Let therefore $T$ be a global polygon in the mesh and $\hat{T}$ be the corresponding reference polygon.
 Between the coordinates
 $x\in T$ and $\hat x\in\hat T$ we use the mapping
 \begin{equation}
 \label{eq:geometry}
 x = F_T(\hat x) = A_T(\hat x)  + x_0,
 \end{equation}
-and define the Jacobian of this mapping as
+The Jacobian of this mapping is: 
 \begin{equation}
 \label{eq:geometry2}
 J(\hat x) =  \frac{\partial x }{\partial \hat x}  =    \frac{\partial A_T(\hat x) }{\partial \hat x} .
 \end{equation}
-For isoparametric elements, the basis functions are defined in terms of the basis function
+For isoparametric elements, the basis functions are defined in terms of the basis functions
 on the reference element as
 \begin{equation}
 \label{eq:subs}
@@ -754,28 +751,48 @@ The integral can then be performed on the reference polygon,
 \int_T \, \phi (x) \, dx = \int_{\hat{T}} \, \hat \phi (\hat x) \, detJ d\hat x ,
 \end{equation}
 and the spatial derivatives are defined by the derivatives on the
-reference element and the geometry mapping simply by using the
+reference element and the geometry mapping by using the
 chain rule,
 \begin{equation}
 \label{eq:chain}
 \frac{\partial \phi}{\partial x_i} =
 \frac{\partial \hat \phi}{\partial \hat x_j} \frac{\partial \hat x_j }{\partial x_i }  .
 \end{equation}
+
 The above mapping of basisfunctions is common for approximations in $H^1$. For approximations in $\Hdiv$ or
 $\Hcurl$ it is neccessary to use the Piola mapping, where the mapping for the basis functions
-is no longer the same as the geometry mapping. That is, for $\Hdiv$ elements, the mapping reads  
+is no longer the same as the geometry mapping. That is, for $\Hdiv$ elements, the Piola mapping reads  
 \begin{equation}
 \label{eq:subs}
-\phi(x) = \frac{1}{detJ} J \hat{\phi}(\hat x),
+\phi(x) = \frac{1}{|detJ|} J \hat{\phi}(\hat x),
 \end{equation}
+When using the numbering of mesh entities used by UFC, see Chapter~\ref{chap:alnes-2}, it is advantageous to use $\frac{1}{detJ}$ instead of $\frac{1}{|detJ|}$ since the sign of the determinant relates to the sign of the normal vector,     
 see for instance ~\citep{RognesKirbyLogg2009} for more details on the Piola mapping and its implementation in FFC.   
-Some elements like the Rannacher-Turek element~\cite{Turek1999,RannacherTurek1992} has far better
+This numbering has also been discussed in \citet{ArnoldFalkWinther2006}. 
+Some elements like the Rannacher-Turek element~\citep{Turek1999,RannacherTurek1992} has far better
 properties when defined globally compared its analogous definition in terms
 of a reference element.
 
-Finally, the finite element needs to provide information about the nature of its degrees of freedom. 
-That is, the elements should provide unique identifiers determining their global degree of freedom. 
+
+\subsection{Local to global mapping of degrees of freedom}
+
+The finite element needs to provide information on how the elements should be patched together, 
+whether their degrees of freedom are shared with neighbouring elements or not, see Figure~\ref{fig:kirby-1:patch}.   
+To obtain the desired patching, the elements should provide unique identifiers determining their global degree of freedom. 
 Most common perhaps, is to relate each degree of freedom on the reference cell to a point in the
-reference cell. The geometry mapping then gives a global point in the mesh that identifies the degree of freedom. Alternatively, each degree of freedom may be related to a local mesh entity, like a vertex, edge or face, on the reference element. After mapping the element, the degree of freedom will then be related to the corresponding mesh entity in the global mesh.      
+reference cell. The geometry mapping then gives a global point in the mesh, given by \eqref{eq:geometry}, that identifies the degree of freedom. 
+Elements sharing points are then sharing the corresponding degrees of freedom.   
+Alternatively, each degree of freedom may be related to a local mesh entity, like a vertex, edge or face, on the reference element. After mapping the element, the degree of freedom will then be related to the corresponding mesh entity in the global mesh.      
+
+
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=\largefig]{chapters/kirby-1/pdf/patch.pdf}
+    \caption{Patching together a pair of quadratic local function
+      spaces on a pair of cells to form a global continuous
+      piecewise quadratic function space.}
+    \label{fig:kirby-1:patch}
+  \end{center}
+\end{figure}
 
 
