--- a/packages/mylistings.sty
+++ b/packages/mylistings.sty
@@ -5,7 +5,7 @@
 %% The original source files were:
 %%
 %% listings.dtx  (with options: `kernel')
-%% 
+%%
 %% Please read the software license in listings-1.3.dtx or listings-1.3.pdf.
 %%
 %% (w)(c) 1996--2004 Carsten Heinz and/or any other author listed
@@ -2234,7 +2234,7 @@
   {\def\lst@loadaspects{strings,comments,escape,style,language,%
       keywords,labels,lineshape,frames,emph,index}%
   }{}
-\InputIfFileExists{lstpatch.sty}{}{}
+%\InputIfFileExists{lstpatch.sty}{}{}
 \let\lst@ifsavemem\iffalse
 \DeclareOption{savemem}{\let\lst@ifsavemem\iftrue}
 \DeclareOption{noaspects}{\let\lst@loadaspects\@empty}
